update for test automatic build with travis CI