@@ -1,13 +1,15 @@
 package io.github.oliviercailloux.plaquette_mido_soap;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.net.Authenticator;
 import java.net.PasswordAuthentication;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Optional;
+import java.util.ArrayList;
+import java.util.List;
 
 public class QueriesHelper {
 
@@ -17,43 +19,63 @@ public class QueriesHelper {
 	}
 
 	public static Authenticator getTokenAuthenticator() {
-		final String tokenValue;
+		final PasswordAuthentication passwordAuthentication;
 		try {
-			tokenValue = getTokenValue();
+			passwordAuthentication = getAuthentication();
 		} catch (IOException e) {
-			throw new IllegalStateException(e);
+			throw new UncheckedIOException(e);
 		}
-		final PasswordAuthentication passwordAuthentication = new PasswordAuthentication("plaquette-mido",
-				tokenValue.toCharArray());
+
 		final Authenticator myAuth = getConstantAuthenticator(passwordAuthentication);
 		return myAuth;
 	}
 
-	private static String getTokenValue() throws IOException, IllegalStateException {
-		final Optional<String> tokenOpt = getTokenOpt();
-		return tokenOpt
-				.orElseThrow(() -> new IllegalStateException("No token found in environment, in property or in file."));
+	private static PasswordAuthentication getAuthentication() throws IOException {
+		final Authentication authentication = readAuthentication();
+		final PasswordAuthentication passwordAuthentication;
+		if (authentication.getUserName().isEmpty())
+			throw new IllegalStateException("username is missing");
+		if (authentication.getPassword().isEmpty())
+			throw new IllegalStateException("password is missing for username " + authentication.getUserName());
+		passwordAuthentication = new PasswordAuthentication(authentication.getUserName().get(),
+				authentication.getPassword().get().toCharArray());
+		return passwordAuthentication;
 	}
 
-	private static Optional<String> getTokenOpt() throws IOException {
+	private static Authentication readAuthentication() throws IOException {
+
 		{
-			final String token = System.getenv("API_password");
-			if (token != null) {
-				return Optional.of(token);
+			final String tokenUserName = System.getenv("API_username");
+			final String tokenPassword = System.getenv("API_password");
+			if (tokenPassword != null && tokenUserName != null) {
+				return Authentication.given(tokenUserName, tokenPassword);
 			}
 		}
 		{
-			final String token = System.getProperty("API_password");
-			if (token != null) {
-				return Optional.of(token);
+			final String tokenUserName = System.getProperty("API_username");
+			final String tokenPassword = System.getProperty("API_password");
+			if (tokenPassword != null && tokenUserName != null) {
+				return Authentication.given(tokenUserName, tokenPassword);
 			}
 		}
-		final Path path = Paths.get("API_password.txt");
+		final Path path = Paths.get("API_login.txt");
 		if (!Files.exists(path)) {
-			return Optional.empty();
+			return Authentication.empty();
 		}
-		final String content = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
-		return Optional.of(content.replaceAll("\n", ""));
+		if (Files.readString(path).isEmpty()) {
+			return Authentication.empty();
+		}
+		final List<String> lines = new ArrayList<String>(Files.readAllLines(path, StandardCharsets.UTF_8));
+		{
+			if (lines.size() == 1) {
+				return Authentication.onlyUserName(lines.get(0).replaceAll("\n", ""));
+			} else if (lines.size() == 2) {
+				String userName = lines.get(0).replaceAll("\n", "");
+				String password = lines.get(1).replaceAll("\n", "");
+				return Authentication.given(userName, password);
+			} else
+				throw new IllegalStateException("File API_login.txt is not written correctly");
+		}
 	}
 
 	private static Authenticator getConstantAuthenticator(PasswordAuthentication passwordAuthentication) {
